force-app/main/default/objects/NegotiationHistory__c/NegotiationHistory__c.object-meta.xml
<CustomObject>
    <description>[P2] 기회견적계약관리 - 협상내역</description>
    <label>협상 내역</label>
    <nameField>
        <label>Negotiation History Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>