force-app/main/default/objects/NegotiationHistory__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Negotiation History</relationshipLabel>
    <relationshipName>Negotiation_History</relationshipName>
    <type>Lookup</type>
</CustomField>