force-app/main/default/objects/NegotiationHistory__c/fields/ActionItem__c.field-meta.xml
<CustomField>
    <fullName>ActionItem__c</fullName>
    <label>Action Item</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>