force-app/main/default/objects/NegotiationHistory__c/fields/CJAttendees__c.field-meta.xml
<CustomField>
    <fullName>CJAttendees__c</fullName>
    <label>CJ Attendees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>