force-app/main/default/objects/NegotiationHistory__c/fields/CustomerAttendees__c.field-meta.xml
<CustomField>
    <fullName>CustomerAttendees__c</fullName>
    <label>Customer Attendees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>