force-app/main/default/objects/NegotiationHistory__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Negotiation History</relationshipLabel>
    <relationshipName>Negotiation_History</relationshipName>
    <type>Lookup</type>
</CustomField>